$Id: History,v 1.29 2002-01-08 12:41:16 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

January 08, 2002  G. Cosmo                 geommng-V04-00-00
- G4AffineTransform.icc: fixed trivial compilation warning for gcc-2.95.2.
- Included latest cosmetics changes to TestAssemblyVolume/TstVADetectorConstruction.cc.

November 23, 2001  G. Cosmo                geommng-V03-02-03
- Initialise noNodes to 1 in G4SmartVoxelHeader::BuildNodes() in case
  computed nodes for smartless happen to be zero (J.Apostolakis).

November 08, 2001  G. Cosmo                geommng-V03-02-02
- Fixed comments for reference manual in G4TouchableHandle.hh.
 
October 26, 2001  G. Cosmo                 geommng-V03-02-01
- Improved printout in G4GeometryManager::ReportVoxelStats().

October 22, 2001  G. Cosmo                 geommng-V03-02-00
- Added definition of G4TouchableHandle (R.Chytracek)
- Added class G4SmartVoxelStat for statistics on geometry optimisation
  of volumes through voxelisation (courtesy of D.C.Williams).
- Modified G4GeometryManager to make use of G4SmartVoxelStat when run in
  verbose mode.

May 31, 2001  G. Cosmo                     geommng-V03-01-04