@@ -1,4 +1,4 @@
-$Id: History,v 1.29 2002-01-08 12:41:16 gcosmo Exp $
+$Id: History,v 1.30 2002-02-26 18:26:38 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+February 26, 2002  G. Cosmo                geommng-V04-00-01
+- G4GeometryManager.cc: fixed handling of ios manipulators and precision to reset
+  to their original state in G4GeometryManager::ReportVoxelStats().
+  Fixes problem report #343.
 
 January 08, 2002  G. Cosmo                 geommng-V04-00-00
 - G4AffineTransform.icc: fixed trivial compilation warning for gcc-2.95.2.
